[Mac] Don't show tooltip when zoom decoration is hidden.

In Material Design the zoom decoration is hidden when the zoom factor is
100%. When the zoom decoration's tooltip should only be visible when the
decoration is visible.

R=avi@chromium.org, dbeam@chromium.org
BUG=635480

Review-Url: https://codereview.chromium.org/2415453004
Cr-Commit-Position: refs/heads/master@{#425389}

Former-commit-id: c12fa88b187817e55ad6ccfc0416aec46cfd8314